[gd_scene load_steps=47 format=3 uid="uid://cay66p48207g3"]

[ext_resource type="Script" path="res://boss/genderuwo/genderuwo.gd" id="1_j7ftm"]
[ext_resource type="Texture2D" uid="uid://eevu4omeyiwi" path="res://boss/genderuwo/genderuwo.png" id="1_tc16l"]
[ext_resource type="PackedScene" uid="uid://eogif4qypcwb" path="res://boss/genderuwo/genderuwo_2p.tscn" id="2_fv1mu"]

[sub_resource type="AtlasTexture" id="AtlasTexture_41uds"]
atlas = ExtResource("1_tc16l")
region = Rect2(0, 2000, 500, 500)

[sub_resource type="AtlasTexture" id="AtlasTexture_q7hph"]
atlas = ExtResource("1_tc16l")
region = Rect2(500, 2000, 500, 500)

[sub_resource type="AtlasTexture" id="AtlasTexture_on2lu"]
atlas = ExtResource("1_tc16l")
region = Rect2(1000, 2000, 500, 500)

[sub_resource type="AtlasTexture" id="AtlasTexture_msq68"]
atlas = ExtResource("1_tc16l")
region = Rect2(1500, 2000, 500, 500)

[sub_resource type="AtlasTexture" id="AtlasTexture_mdkr0"]
atlas = ExtResource("1_tc16l")
region = Rect2(2000, 2000, 500, 500)

[sub_resource type="AtlasTexture" id="AtlasTexture_v1mvo"]
atlas = ExtResource("1_tc16l")
region = Rect2(2500, 2000, 500, 500)

[sub_resource type="AtlasTexture" id="AtlasTexture_f1j0j"]
atlas = ExtResource("1_tc16l")
region = Rect2(3000, 2000, 500, 500)

[sub_resource type="AtlasTexture" id="AtlasTexture_2biwe"]
atlas = ExtResource("1_tc16l")
region = Rect2(3500, 2000, 500, 500)

[sub_resource type="AtlasTexture" id="AtlasTexture_74364"]
atlas = ExtResource("1_tc16l")
region = Rect2(4000, 2000, 500, 500)

[sub_resource type="AtlasTexture" id="AtlasTexture_vpg6p"]
atlas = ExtResource("1_tc16l")
region = Rect2(4500, 2000, 500, 500)

[sub_resource type="AtlasTexture" id="AtlasTexture_ro87t"]
atlas = ExtResource("1_tc16l")
region = Rect2(5000, 2000, 500, 500)

[sub_resource type="AtlasTexture" id="AtlasTexture_3cr6y"]
atlas = ExtResource("1_tc16l")
region = Rect2(5500, 2000, 500, 500)

[sub_resource type="AtlasTexture" id="AtlasTexture_1psds"]
atlas = ExtResource("1_tc16l")
region = Rect2(6000, 2000, 500, 500)

[sub_resource type="AtlasTexture" id="AtlasTexture_ub5fa"]
atlas = ExtResource("1_tc16l")
region = Rect2(0, 0, 500, 500)

[sub_resource type="AtlasTexture" id="AtlasTexture_3p6nm"]
atlas = ExtResource("1_tc16l")
region = Rect2(500, 0, 500, 500)

[sub_resource type="AtlasTexture" id="AtlasTexture_327m0"]
atlas = ExtResource("1_tc16l")
region = Rect2(1000, 0, 500, 500)

[sub_resource type="AtlasTexture" id="AtlasTexture_ne8v4"]
atlas = ExtResource("1_tc16l")
region = Rect2(1500, 0, 500, 500)

[sub_resource type="AtlasTexture" id="AtlasTexture_v6itx"]
atlas = ExtResource("1_tc16l")
region = Rect2(2000, 0, 500, 500)

[sub_resource type="AtlasTexture" id="AtlasTexture_hwnom"]
atlas = ExtResource("1_tc16l")
region = Rect2(0, 500, 500, 500)

[sub_resource type="AtlasTexture" id="AtlasTexture_pqq7a"]
atlas = ExtResource("1_tc16l")
region = Rect2(500, 500, 500, 500)

[sub_resource type="AtlasTexture" id="AtlasTexture_qegof"]
atlas = ExtResource("1_tc16l")
region = Rect2(1000, 500, 500, 500)

[sub_resource type="AtlasTexture" id="AtlasTexture_3jngm"]
atlas = ExtResource("1_tc16l")
region = Rect2(1500, 500, 500, 500)

[sub_resource type="AtlasTexture" id="AtlasTexture_yyrrb"]
atlas = ExtResource("1_tc16l")
region = Rect2(2500, 500, 500, 500)

[sub_resource type="AtlasTexture" id="AtlasTexture_0suil"]
atlas = ExtResource("1_tc16l")
region = Rect2(2000, 500, 500, 500)

[sub_resource type="AtlasTexture" id="AtlasTexture_mrhri"]
atlas = ExtResource("1_tc16l")
region = Rect2(3000, 500, 500, 500)

[sub_resource type="AtlasTexture" id="AtlasTexture_x1dmj"]
atlas = ExtResource("1_tc16l")
region = Rect2(3500, 500, 500, 500)

[sub_resource type="AtlasTexture" id="AtlasTexture_xfkgk"]
atlas = ExtResource("1_tc16l")
region = Rect2(4000, 500, 500, 500)

[sub_resource type="AtlasTexture" id="AtlasTexture_hv8ds"]
atlas = ExtResource("1_tc16l")
region = Rect2(4500, 500, 500, 500)

[sub_resource type="AtlasTexture" id="AtlasTexture_2xhcy"]
atlas = ExtResource("1_tc16l")
region = Rect2(5000, 500, 500, 500)

[sub_resource type="AtlasTexture" id="AtlasTexture_urovd"]
atlas = ExtResource("1_tc16l")
region = Rect2(5500, 500, 500, 500)

[sub_resource type="AtlasTexture" id="AtlasTexture_8vmni"]
atlas = ExtResource("1_tc16l")
region = Rect2(0, 1000, 500, 500)

[sub_resource type="AtlasTexture" id="AtlasTexture_tc7ie"]
atlas = ExtResource("1_tc16l")
region = Rect2(500, 1000, 500, 500)

[sub_resource type="AtlasTexture" id="AtlasTexture_wur23"]
atlas = ExtResource("1_tc16l")
region = Rect2(1000, 1000, 500, 500)

[sub_resource type="AtlasTexture" id="AtlasTexture_qcalp"]
atlas = ExtResource("1_tc16l")
region = Rect2(1500, 1000, 500, 500)

[sub_resource type="AtlasTexture" id="AtlasTexture_pxbex"]
atlas = ExtResource("1_tc16l")
region = Rect2(2000, 1000, 500, 500)

[sub_resource type="AtlasTexture" id="AtlasTexture_61ur7"]
atlas = ExtResource("1_tc16l")
region = Rect2(2500, 1000, 500, 500)

[sub_resource type="AtlasTexture" id="AtlasTexture_0g2gj"]
atlas = ExtResource("1_tc16l")
region = Rect2(3000, 1000, 500, 500)

[sub_resource type="AtlasTexture" id="AtlasTexture_eed10"]
atlas = ExtResource("1_tc16l")
region = Rect2(0, 1500, 500, 500)

[sub_resource type="SpriteFrames" id="SpriteFrames_xsydp"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_41uds")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q7hph")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_on2lu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_msq68")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mdkr0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v1mvo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f1j0j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2biwe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_74364")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vpg6p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ro87t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3cr6y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1psds")
}],
"loop": false,
"name": &"death",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ub5fa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3p6nm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_327m0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ne8v4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v6itx")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hwnom")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pqq7a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qegof")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pqq7a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qegof")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3jngm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yyrrb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0suil")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mrhri")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mrhri")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3jngm")
}],
"loop": false,
"name": &"skill1",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_x1dmj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xfkgk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hv8ds")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2xhcy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_urovd")
}],
"loop": false,
"name": &"skill11",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8vmni")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tc7ie")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wur23")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wur23")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wur23")
}],
"loop": false,
"name": &"skill2",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qcalp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pxbex")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_61ur7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0g2gj")
}],
"loop": false,
"name": &"skill22",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_eed10")
}],
"loop": true,
"name": &"skill3",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_w2v1v"]
size = Vector2(101, 271)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_46xxw"]
size = Vector2(98, 45)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dy7mt"]
size = Vector2(200.5, 370)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fd6p5"]
size = Vector2(98, 272)

[node name="genderuwo" type="CharacterBody2D"]
show_behind_parent = true
collision_layer = 64
script = ExtResource("1_j7ftm")
skill2p = ExtResource("2_fv1mu")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(-22, -142)
sprite_frames = SubResource("SpriteFrames_xsydp")
animation = &"death"
autoplay = "idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visibility_layer = 0
position = Vector2(0, -136)
shape = SubResource("RectangleShape2D_w2v1v")

[node name="Hitbox" type="Area2D" parent="." groups=["HitboxEnemies"]]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Hitbox"]
position = Vector2(0, -22.5)
shape = SubResource("RectangleShape2D_46xxw")
disabled = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2(-149.25, -186)
shape = SubResource("RectangleShape2D_dy7mt")
disabled = true

[node name="Hurtbox" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
position = Vector2(0, -136)
shape = SubResource("RectangleShape2D_fd6p5")

[node name="TimerSkill" type="Timer" parent="."]
one_shot = true

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="area_entered" from="Hurtbox" to="." method="_on_hurtbox_area_entered"]
[connection signal="timeout" from="TimerSkill" to="." method="_on_timer_skill_timeout"]
